<resources>
    <string name="app_name">ICCardTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="cy_zd_btn_open">打开</string>
    <string name="cy_zd_btn_close">关闭</string>
    <string name="cy_zd_btn_send">写入</string>
    <string name="cy_zd_btn_read">读取</string>
    <string name="cy_zd_tv_com">端口：</string>
    <string name="cy_zd_et_com">/dev/ttyS2</string>
    <string name="cy_zd_et_data">数据：</string>
    <string name="cy_zd_btn_clear">清空</string>
</resources>
